--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "619bb77a",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4ed368be",
    "metadata": {},
    "outputs": [],
@@ -24,151 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fc0722cb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\"> Using default Ollama API base: </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">http://localhost:11434.</span><span style=\"color: #808000; text-decoration-color: #808000\"> If inference is not working, you may need to set </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the API base to the correct URL.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m Using default Ollama API base: \u001b[0m\u001b[4;33mhttp://localhost:11434.\u001b[0m\u001b[33m If inference is not working, you may need to set \u001b[0m\n",
-       "\u001b[33mthe API base to the correct URL.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\">: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the model documentation at </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">https://docs.litellm.ai/docs/providers</span><span style=\"color: #808000; text-decoration-color: #808000\"> for more information.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check \u001b[0m\n",
-       "\u001b[33mthe model documentation at \u001b[0m\u001b[4;33mhttps://docs.litellm.ai/docs/providers\u001b[0m\u001b[33m for more information.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\"> Using default Ollama API base: </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">http://localhost:11434.</span><span style=\"color: #808000; text-decoration-color: #808000\"> If inference is not working, you may need to set </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the API base to the correct URL.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m Using default Ollama API base: \u001b[0m\u001b[4;33mhttp://localhost:11434.\u001b[0m\u001b[33m If inference is not working, you may need to set \u001b[0m\n",
-       "\u001b[33mthe API base to the correct URL.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\">: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the model documentation at </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">https://docs.litellm.ai/docs/providers</span><span style=\"color: #808000; text-decoration-color: #808000\"> for more information.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check \u001b[0m\n",
-       "\u001b[33mthe model documentation at \u001b[0m\u001b[4;33mhttps://docs.litellm.ai/docs/providers\u001b[0m\u001b[33m for more information.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "worker = libertas.agents.Worker(\n",
     "    model,\n",
     "    CoTReasoning,\n",
-    "    \"ollama/llama2\"\n",
+    "    \"deepseek/deepseek-chat\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a51093b2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\"> Using default Ollama API base: </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">http://localhost:11434.</span><span style=\"color: #808000; text-decoration-color: #808000\"> If inference is not working, you may need to set </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the API base to the correct URL.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m Using default Ollama API base: \u001b[0m\u001b[4;33mhttp://localhost:11434.\u001b[0m\u001b[33m If inference is not working, you may need to set \u001b[0m\n",
-       "\u001b[33mthe API base to the correct URL.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\">: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the model documentation at </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">https://docs.litellm.ai/docs/providers</span><span style=\"color: #808000; text-decoration-color: #808000\"> for more information.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check \u001b[0m\n",
-       "\u001b[33mthe model documentation at \u001b[0m\u001b[4;33mhttps://docs.litellm.ai/docs/providers\u001b[0m\u001b[33m for more information.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\"> Using default Ollama API base: </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">http://localhost:11434.</span><span style=\"color: #808000; text-decoration-color: #808000\"> If inference is not working, you may need to set </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the API base to the correct URL.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m Using default Ollama API base: \u001b[0m\u001b[4;33mhttp://localhost:11434.\u001b[0m\u001b[33m If inference is not working, you may need to set \u001b[0m\n",
-       "\u001b[33mthe API base to the correct URL.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">[</span><span style=\"color: #808000; text-decoration-color: #808000\">Warning</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">]</span><span style=\"color: #808000; text-decoration-color: #808000\">: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check </span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">the model documentation at </span><span style=\"color: #808000; text-decoration-color: #808000; text-decoration: underline\">https://docs.litellm.ai/docs/providers</span><span style=\"color: #808000; text-decoration-color: #808000\"> for more information.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33m[\u001b[0m\u001b[33mWarning\u001b[0m\u001b[1;33m]\u001b[0m\u001b[33m: ollama/llama2 does not support function calling. This model may not be able to use tools. Please check \u001b[0m\n",
-       "\u001b[33mthe model documentation at \u001b[0m\u001b[4;33mhttps://docs.litellm.ai/docs/providers\u001b[0m\u001b[33m for more information.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pod = libertas.agents.Pod(\n",
     "    model,\n",
     "    CoTReasoning,\n",
-    "    \"ollama/llama2\"\n",
+    "    \"deepseek/deepseek-chat\"\n",
     ")\n",
     "\n",
     "pod.setup_pod(\n",
@@ -180,35 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "15910c76",
+   "execution_count": 6,
+   "id": "e507ca30",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ModelResponse(id='chatcmpl-fadb5bf5-91f4-4468-9237-8f0c66d1cad1', created=1766530987, model='ollama/llama2', object='chat.completion', system_fingerprint=None, choices=[Choices(finish_reason='stop', index=0, message=Message(content='Hello there! How can I help you today?', role='assistant', tool_calls=None, function_call=None, provider_specific_fields=None, reasoning_content=None))], usage=Usage(completion_tokens=11, prompt_tokens=30, total_tokens=41, completion_tokens_details=None, prompt_tokens_details=None))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #0000ff; text-decoration-color: #0000ff\">╭─ Step </span><span style=\"color: #af00ff; text-decoration-color: #af00ff; font-weight: bold\">0</span><span style=\"color: #0000ff; text-decoration-color: #0000ff\"> </span><span style=\"color: #0000ff; text-decoration-color: #0000ff; font-weight: bold\">|</span><span style=\"color: #0000ff; text-decoration-color: #0000ff\"> Worker </span><span style=\"color: #af00ff; text-decoration-color: #af00ff; font-weight: bold\">1</span><span style=\"color: #0000ff; text-decoration-color: #0000ff\"> ─────────────────────────────────────────────────────────────────────────────────────────────╮</span>\n",
-       "<span style=\"color: #0000ff; text-decoration-color: #0000ff\">│</span>                                                                                                                 <span style=\"color: #0000ff; text-decoration-color: #0000ff\">│</span>\n",
-       "<span style=\"color: #0000ff; text-decoration-color: #0000ff\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[94m╭─\u001b[0m\u001b[94m Step \u001b[0m\u001b[1;38;5;129m0\u001b[0m\u001b[94m \u001b[0m\u001b[1;94m|\u001b[0m\u001b[94m Worker \u001b[0m\u001b[1;38;5;129m1\u001b[0m\u001b[94m \u001b[0m\u001b[94m────────────────────────────────────────────────────────────────────────────────────────────\u001b[0m\u001b[94m─╮\u001b[0m\n",
-       "\u001b[94m│\u001b[0m                                                                                                                 \u001b[94m│\u001b[0m\n",
-       "\u001b[94m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "worker.step()"
    ]
@@ -216,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e507ca30",
+   "id": "f0446143",
    "metadata": {},
    "outputs": [],
    "source": []
